--- a/About/About.html
+++ b/About/About.html
@@ -13,7 +13,7 @@
             <ol>
                 <li><a href="/index.html">Home</a></li>
                 <li><a href="/About/About.html">About</a></li>
-                <li><a href="/">Projects</a></li>
+                <li><a href="/Projects/project.html">Projects</a></li>
                 <li><a href="/">Contact Me</a></li>
             </ol>
         </div>
