--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rethick's Portfolio</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <header>
@@ -14,7 +15,7 @@
                 <li><a href="/index.html">Home</a></li>
                 <li><a href="/About/About.html">About</a></li>
                 <li><a href="/Projects/project.html">Projects</a></li>
-                <li><a href="/">Contact Me</a></li>
+                <li><a href="/ContactMe/contact.html">Contact Me</a></li>
             </ol>
         </div>
     </header>
@@ -24,7 +25,7 @@
                 Hi, my name is <span id="name">Rethick</span> and I'm a passinate <br>
                 <span id="element"></span>
                 <div class="btn">
-                    <a href="Rethick's Resume (3).pdf"><button class="btns">Download Resume</button></a>
+                    <a href="Rethick Resume .pdf"><button class="btns">Download Resume</button></a>
                     <a href="https://github.com/Xicor123"><button class="btns">Github</button></a>
                 </div>
             </div>
